<resources>
    <string name="app_name">parKing</string>
    <string name="rentBtn">Find your closet parking now!</string>
    <string name="parkingSearch">Find your lovely parking by search</string>
    <string name="title_activity_customer__maps">Map</string>
    <string name="customer_start_rent">Start</string>
    <string name="customer_end_rent">End</string>
    <string name="customer_hours_map">Hours</string>
    <string name="Adress_city">Enter Address, City</string>
    <string name="ic_search">ic_search</string>
    <string name="title_activity_business_navigation">business_navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation_frawer_open">open navi</string>
    <string name="navigation_frawer_close">close navi</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_user__profile">User_Profile</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
</resources>
