<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="150dp"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/customer_white_border_map"
        android:elevation="20dp"
        android:id="@+id/relLayoutSearch" >

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/customer_ic_search"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_search_black_25dp"
            android:contentDescription="@string/ic_search" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/customer_ic_search"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="#000"
            android:id="@+id/input_search"
            android:background="@null"
            android:hint="@string/Adress_city"
            android:autofillHints=""
            android:inputType="textPostalAddress" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/customer_options_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/customer_grey_border_nav_map"
        android:visibility="visible">


        <TextView
            android:id="@+id/start_rent"
            android:layout_width="73dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="94dp"
            android:text="@string/customer_start_rent"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/end_rent"
            android:layout_width="61dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="94dp"
            android:text="@string/customer_end_rent"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="97dp"
            android:layout_marginEnd="86dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="110dp"
            android:layout_toStartOf="@+id/end_rent"
            android:layout_toEndOf="@+id/start_rent"
            android:text="@string/customer_hours_map"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignBottom="@+id/map"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="363dp"
        android:layout_marginTop="549dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="1dp"
        android:text="Hide"
        android:textSize="8sp"
        android:onClick="ShowHideBtn"/>

</RelativeLayout>