<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_login"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bc_login_glass"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"

          >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/contact_form_name"
                    android:textAllCaps="true"
                    android:textColor="#fff"

                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/your_name"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:layout_marginBottom="20dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="#fff"

                    android:textSize="14sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/contact_form_email"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/your_email"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:layout_marginBottom="20dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="#fff"

                    android:textSize="14sp" />


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/contact_form_subject"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/your_subject"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:layout_marginBottom="20dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="#fff"

                    android:textSize="14sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:paddingLeft="3dp"
                    android:text="@string/contact_form_message"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/your_message"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"

                    android:layout_marginBottom="20dp"
                    android:height="180dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/post_message"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@drawable/angle"
                    android:paddingBottom="1dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="1dp"
                    android:text="@string/contact_form_button"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="13sp" />
            </LinearLayout>
        </ScrollView>

</RelativeLayout>
</RelativeLayout>